--- a/用户手册.md
+++ b/用户手册.md
@@ -1469,17 +1469,11 @@ done
 
 ##  特性
 
-### 总览
-
-和简化的传统编译器架构类似，`sushiscript`实现分为三大部分：编译器前端，分析与检查，以及代码生成。但为了实现简单和分工方便的考虑：前端部分目前细分为**词法分析**（`sushi/lexer`）和**语法分析**（`sushi/parser`）两阶段，分析与检查又分为**作用域分析**（`sushi/scope`）以及**类型检查**（`sushi/type-system/type-check`）两阶段。每个阶段在实现上均假设输入的各种性质完全正确，并且各自产生自己的错误，顶层的**流水线**（`sushi/pipeline`）按顺序执行每一个阶段，并把上一阶段的输出传递给下一阶段，如果在任何一个阶段遇到错误，则将错误输出并退出。
-
 ### 抽象语法树
 
-上述几乎所有的阶段（除了词法分析以外）都需要围绕抽象语法树来进行，所以这里简单介绍一下。语法树的完整实现见[`sushi/ast/`](https://github.com/Sushiscript/sushiscript/tree/master/include/sushi/ast)。
+和简化的传统编译器架构类似，`sushiscript`实现分为三大部分：编译器前端，分析与检查，以及代码生成。但为了实现简单和分工方便的考虑：前端部分目前细分为**词法分析**（`sushi/lexer`）和**语法分析**（`sushi/parser`）两阶段，分析与检查又分为**作用域分析**（`sushi/scope`）以及**类型检查**（`sushi/type-system/type-check`）两阶段。每个阶段在实现上均假设输入的各种性质完全正确，并且各自产生自己的错误，顶层的**流水线**（`sushi/pipeline`）按顺序执行每一个阶段，并把上一阶段的输出传递给下一阶段，如果在任何一个阶段遇到错误，则将错误输出并退出。上述几乎所有的阶段（除了词法分析以外）都需要围绕抽象语法树来进行，所以这里简单介绍一下。语法树的完整实现见[`sushi/ast/`](https://github.com/Sushiscript/sushiscript/tree/master/include/sushi/ast)。
 
 语法树类型是语言的语法结构在编程语言中的抽象表示，本质上是递归的数据类型（[recursive data type](https://en.wikipedia.org/wiki/Recursive_data_type))。映射到c++也就是用基于指针的链式结构来表达递归（实现上用了`std::unique_ptr`）。因此语法树整体上和[文档](https://github.com/Sushiscript/sushiscript/blob/master/docs/language-specification.md)中的语法结构完全一致（大体上分为[`sushi::ast::Statement`](https://github.com/Sushiscript/sushiscript/blob/master/include/sushi/ast/statement/statement.h)以及[`sushi::ast::Expression`](https://github.com/Sushiscript/sushiscript/blob/master/include/sushi/ast/expression/expression.h)），因此具体的结构在这里不详述。
-
-设计上，我们用了[visitor模式](https://en.wikipedia.org/wiki/Visitor_pattern)来实现不同地方对于语法树（以及很多其它类型）的访问（visitor我们的c++元编程实现见：[`sushi/util/visitor.h`](https://github.com/Sushiscript/sushiscript/blob/master/include/sushi/util/visitor.h)）。从理论角度谈，visitor模式是[和类型](https://en.wikipedia.org/wiki/Tagged_union)的[模式匹配](https://en.wikipedia.org/wiki/Pattern_matching)在面向对象中的简单（不完整）实现方式（鉴于抽象语法树代数数据类型的本质，这个抽象是很直观的）。而从面向对象角度而言，由于可拓展性的要求，visitor模式可以解耦类定义以及对类的操作，我们不需要在每次用语法树做不同的事的时候都在类内增加新的方法，而只需要实现新的visitor。一个简单的使用的例子见：[`sushi/ast/to-string.h`](https://github.com/Sushiscript/sushiscript/blob/master/include/sushi/ast/to-string.h)
 
 ### 语法与词法分析
 
@@ -1487,7 +1481,7 @@ done
 
 #### 常规语法分析和词法分析
 
-`sushiscript`的词法和语法分析器是完全手写的，且基于一个[`LookaheadStream`](https://github.com/Sushiscript/sushiscript/blob/master/include/sushi/lexer/detail/lookahead-stream.h)的抽象，这个抽象使得我们可以轻易地在不消耗字符流的情况下获取字符流头部的内容，这样不管在控制字符流（[`sushi/lexer/detail/source-stream.h`](https://github.com/Sushiscript/sushiscript/blob/master/include/sushi/lexer/detail/source-stream.h)或者token流上都非常方便。
+`sushiscript`的词法和语法分析器完全手写，且基于一个[`LookaheadStream`](https://github.com/Sushiscript/sushiscript/blob/master/include/sushi/lexer/detail/lookahead-stream.h)的抽象，这个抽象使得我们可以轻易地在不消耗字符流的情况下获取字符流头部的内容，这样不管在控制字符流（[`sushi/lexer/detail/source-stream.h`](https://github.com/Sushiscript/sushiscript/blob/master/include/sushi/lexer/detail/source-stream.h)或者token流上都非常方便。
 
 常规的词法分析部分大致是一个不严谨的自动机，通过lookahead来判断下一步需要提取的token，[`sushi/lexer/context.cpp`](#link-todo)和[`sushi/lexer/lexeme.cpp`](#link-todo)包含了一般的lookahead之后dispatch，并且在这个过程中修改[自动机状态](#link-todo)。
 
@@ -1502,8 +1496,6 @@ done
 剩下的问题就是解耦上下文产生token以及lexer和上下文交互的过程，这里的实现借鉴了[状态模式](https://en.wikipedia.org/wiki/State_pattern)，只不过这里的状态不仅仅是一个状态，而是一个状态栈。不同的上下文在产生token时，同时产生控制信息，告诉lexer是应该1. 进入一个新的上下文 2. 退出当前上下文 3. 保持当前上下文。lexer对上下文产生消息的反应见[`sushi/lexer/lexer.h: Lexer::ExecuteAction()`](#link-todo)
 
 ### 作用域生成与检查
-
-本阶段的主要任务是 **生成作用域** 和 **检查重定义/未定义** ，该阶段会产出 `Scope` 和 `Environment` 两个结果。
 
 Scope 即作用域，其中记录着该作用域中定义的标识符。在遍历语法树时，遇到 **变量定义**、**函数定义**、**基于range的for语句** 则要在相应作用域插入标识符，下面将这几种情况总称为“定义”。
 
